css/style.css
* {
	margin: 0;
	/*padding: 0;*/
	line-height: 1.4;
	/*font-style: normal*/
	font-weight: normal;
	overflow: hidden;
	zoom: 100%;
}

/*
 * Firefox has mysterious extra space when using line-height,
 * compared to IE and Chrome
 *
 * Seems to be fixed by removing heading zoom rule, let's wait and see
 */
@-moz-document url-prefix() {
	* {
			/*line-height: 1.15;*/
	}
}

html {
	background-color: #ccc;
	overflow: auto;
}

body {
	background-color: #fff;
	font: normal 16px Arial, sans-serif;
	width: 65%;
	min-width: 960px;
	margin: 10px auto;
	padding: 15px;
	border-radius: 10px;
}

header {
	border-bottom: 1px solid #ccc;
}

footer {
	text-align: right;
	color: #888;
}

h1 { font-size: 1.5em; }
h2 { font-size: 1.125em; }
h3 { font-size: 1em; }

a {
	text-decoration: none;
	color: #479;
}

/* Because IE likes to make the site title disappear */
a:hover {
	color: #83A5BC;
}

a * {
	border: none;
}

a *:hover {
	opacity: 0.66;
}

strong {
	font-weight: bold;
}

#content {
	margin: 10px;
}

#menu-wrap {
	float:left;
	width:100%;
	border-top:1px solid #ccc;
	margin: 5px 0;
}

#menu {
	display: table;
	table-layout: fixed;
	width: 100%;
	float: left;
	/*margin: 5px 0;*/
	padding: 5px 0;
	border-top: 1px solid #ccc;
	/*border-bottom: 1px solid #ccc;*/
	font-size: 90%;
}

#menu > div {
	display: table-cell;
	width: 2%;
}

#menu > div + div {
	border-left: 1px dotted #ccc;
}

#menu ul {
	padding: 0 10px;
}

#menu ul li {
	padding: 2px;
}

#tab {
	color:white;
	line-height: normal;
	background-color: #e13;
	float: right;
	font-size: 125%;
	border-radius: 16px;
	border: 4px solid #e13;
	border-top-left-radius: 0px;
	border-top-right-radius: 0px;
}

#tab > div {
	padding: 0px 8px 5px;
	border-radius: 12px;
	border-bottom: 8px solid white;
}

#tab > div:hover {
	opacity:1;
}

#tab div, #tab-arrow {
	float:left;
	-webkit-transition: -webkit-transform 0.4s ease;
	-moz-transition: -webkit-transform 0.4s ease;
	transition: -webkit-transform 0.4s ease;
}

#messagebox {
	border: 1px solid #9af;
	border-radius: 5px;
	background-color: #bdf;
	width: 80%;
	margin: 15px;
	padding: 10px;
}

.left {
	float: left;
	margin-right: 5px;
}

.right {
	float: right;
	margin-left: 5px;
	text-align: right;
}

.rotate {
	-webkit-transform: rotate(180deg);
	-moz-transform: rotate(180deg);
	transform: rotate(180deg);
}

/* Override JQuery UI's oversize widgets */
.ui-widget {
	font-size: inherit !important;
}

